# Client-Server

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  snake_game
src/: client.c  client.h  game.c  game.h  main.c  obstacles.txt  renderer.c  renderer.h  server.c  server.h  snake.c  snake.h
